--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.27",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.22.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-loading-skeleton": "^2.2.0",
-    "react-query": "^3.25.1",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-query": "^3.39.3",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
     "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.2"
   },
